--- a/package.json
+++ b/package.json
@@ -84,6 +84,10 @@
                 "command": "agentFleet.focusWorkspaceFromTerminal",
                 "title": "Focus Workspace",
                 "icon": "$(window)"
+            },
+            {
+                "command": "agentFleet.setStatusIdle",
+                "title": "Reset Status to Idle"
             }
         ],
         "menus": {
@@ -111,6 +115,10 @@
                 },
                 {
                     "command": "agentFleet.removeAgent",
+                    "when": "viewItem == agent"
+                },
+                {
+                    "command": "agentFleet.setStatusIdle",
                     "when": "viewItem == agent"
                 }
             ],
